--- a/MESA_inlists/sections2-3/accrete/diffusion_timescales/README
+++ b/MESA_inlists/sections2-3/accrete/diffusion_timescales/README
@@ -9,7 +9,9 @@ run_star_extras.f.
 
 You need to specify which element you want to accrete and track for
 recording diffusion timescales in the places where you find "ISO_HERE"
-in accrete.rb and run_star_extras.f.
+in accrete.rb and run_star_extras.f. E.g. if you want Ca40, you would
+replace "ISO_HERE" with "ca40" in accrete.rb and "ica40" in
+run_star_extras.f.
 
 Put these files in a MESA work directory, and execute the script by
 running "ruby accrete.rb"
